# TI2.1-CPP

./: .gitignore  README.md
Collaboration/: collaboration.sln
Collaboration/groep1/: main.cpp
Collaboration/groep2/: main.cpp
Collaboration/groep3/: main.cpp
Collaboration/groep4/: main.cpp
Collaboration/groep5/: main.cpp
Collaboration/groep6/: main.cpp
Collaboration/groep7/: main.cpp
Collaboration/groep8/: main.cpp
Lib/: chronotimer.cpp  clocktimer.cpp  linuxtimer.cpp  log.cpp  log.hpp  socket.hpp
Voorbeelden/: voorbeelden.sln
Voorbeelden/AssignmentOperator/: AssignmentOperator.vcxproj  AssignmentOperator.vcxproj.filters  main.cpp
Voorbeelden/ConcreteLinkedList/: ConcreteLinkedList.cpp  ConcreteLinkedList.vcxproj
Voorbeelden/FriendClass/: Date.h
Voorbeelden/FriendFunction/: FriendFunction.vcxproj.filters
Voorbeelden/HelloAlgorithm/: HelloAlgorithm.cpp
Voorbeelden/HelloArrays/: HelloArrays.cpp  HelloArrays.vcxproj
Voorbeelden/HelloCppArray/: HelloCppArray.vcxproj.filters
Voorbeelden/HelloPointer/: HelloPointer.cpp
Voorbeelden/HelloReplaceString/: HelloReplaceString.cpp
Voorbeelden/HelloStrings/: HelloStrings.cpp
Voorbeelden/HelloVector/: HelloVector.cpp
Voorbeelden/HelloWorld/: HelloWorld.vcxproj
Voorbeelden/Iterator/: HelloIterator.cpp
Voorbeelden/Literals/: Literals.vcxproj  main.cpp
Voorbeelden/RationalOverloading/: Rational.cpp  RationalOverloading.vcxproj  TestRational.cpp
Voorbeelden/StudentDate/: Date.cpp
Voorbeelden/TemplateLinkedList/: LinkedList.h  TemplateLinkedList.vcxproj.filters
Voorbeelden/ThreeFiveZero/: ThreeFiveZero.vcxproj  customer.cpp  customer.hpp  main.cpp  patient.cpp  patient.hpp  person.hpp  student.cpp  student.hpp
Voorbeelden/Union/: FriendsExample.cpp  Union.vcxproj  Union.vcxproj.filters
Week1/HelloWorld/HelloWorld/: rekenen.cpp
Week1/Opdracht 1/: Opdracht 1.sln
Week1/Opdracht 1/Opdracht 1/: BoostVoorbeeld.cpp  BoostVoorbeeld.vcxproj
Workshop 1/HelloWorld/: HelloWorld.sln
Workshop 1/HelloWorld/HelloWorld/: HelloWorld.vcxproj  helloworld.cpp  log.hpp  rekenen.cpp  rekenen.hpp
Workshop 1/Opdracht/: opdracht.sln
Workshop 1/Opdracht/boostvoorbeeld/: boostVoorbeeld.vcxproj
Workshop 1/Opdracht/robot/: main.cpp  robot.filters  robot.vcxproj  robot.vcxproj.filters
Workshop 1/Workshop/HelloWorld/: HelloWorld.vcxproj  HelloWorld.vcxproj.filters  main.cpp  rekenen.cpp  rekenen.hpp
Workshop 2/Opdracht/: opdracht workshop 2.sln
Workshop 2/Workshop/: workshop 2.sln
Workshop 2/Workshop/cpp_c_asm/: bitdemo.cpp  bitdemo.hpp  calcx64.asm  calcx86.asm  cpp_c_asm.vcxproj  crc.c  crc.h  main.cpp  mirror.cpp  mirror.hpp  swap.cpp  swap.hpp
Workshop 2/Workshop/workshop/: main.cpp  robot.cpp  workshop.vcxproj  workshop.vcxproj.filters
Workshop 3/Opdracht/: opdracht workshop 3.sln
Workshop 3/Opdracht/opdracht4/: main.cpp  opdracht4.vcxproj  opdracht4.vcxproj.filters
Workshop 3/Workshop/: workshop 3.sln
Workshop 3/Workshop/linkedlist/: linkedlist.cpp  linkedlist.hpp  linkedlist.vcxproj  main.cpp  robot.hpp
Workshop 3/Workshop/workshop/: main.cpp  robot.hpp  workshop.vcxproj.filters
Workshop 4/Opdracht/Opdracht/: main.cpp  opdracht.vcxproj.filters
Workshop 4/Workshop/: workshop 4.sln
Workshop 4/Workshop/crossplatform/: CMakeLists.txt  crossplatform.vcxproj  crossplatform.vcxproj.filters  readme.txt
Workshop 4/Workshop/myApp/: CMakeLists.txt  myApp.vcxproj  myApp.vcxproj.filters  readme.txt
Workshop 4/Workshop/myApp/src/: log.hpp  main.cpp
Workshop 4/Workshop/workshop/: main.cpp  workshop.vcxproj.filters
Workshop 5/Opdracht/Opdracht/: opdracht.vcxproj.filters
Workshop 5/Workshop/: workshop 5.sln
Workshop 5/Workshop/workshop/: main.cpp  player.cpp  player.hpp  workshop.vcxproj  workshop.vcxproj.filters
Workshop 6/Opdracht/: opdracht workshop 6.sln
Workshop 6/Opdracht/Lib/: log.cpp  log.hpp
Workshop 6/Opdracht/Opdracht/: opdracht.vcxproj
Workshop 6/Opdracht/reductie/: CMakeLists.txt  main.cpp  readme.txt  reductie.vcxproj  reductie.vcxproj.filters
Workshop 6/Workshop/: workshop 6.sln
Workshop 6/Workshop/AsyncExample/: AsyncExample.vcxproj  AsyncExample.vcxproj.filters  chronotimer.cpp  chronotimer.hpp  main.cpp  timerbase.hpp
Workshop 6/Workshop/HelloAsync/: HelloAsync.vcxproj  main.cpp
Workshop 6/Workshop/HelloNoAsync/: HelloNoAsync.vcxproj  main.cpp
Workshop 6/Workshop/HelloThreads/: HelloThreads.cpp  HelloThreads.vcxproj
Workshop 6/Workshop/Lib/: omptimer.hpp  windowstimer.hpp
Workshop 6/Workshop/NoAsyncExample/: NoAsyncExample.vcxproj  NoAsyncExample.vcxproj.filters  chronotimer.hpp  main.cpp
Workshop 6/Workshop/OpenMPExample/: OpenMPExample.vcxproj  OpenMPExample.vcxproj.filters  main.cpp
Workshop 6/Workshop/OpenMPFibonacci/: CMakeLists.txt  OpenMPFibonacci.vcxproj  OpenMPFibonacci.vcxproj.filters  chronotimer.hpp  main.cpp  readme.txt
Workshop 6/Workshop/OpenMPMatrix/: OpenMPMatrix.vcxproj  OpenMPMatrix.vcxproj.filters  main.cpp
Workshop 6/Workshop/ThreadingExample/: ThreadingExample.cpp  ThreadingExample.vcxproj  semaphore.h
Workshop 6/Workshop/fibonacci/: CMakeLists.txt  chronotimer.cpp  fibonacci .vcxproj  fibonacci .vcxproj.filters  main.cpp  readme.txt
Workshop 6/Workshop/workshop/: main.cpp  (+2 more)
Workshop 7/Workshop/: workshop 7.sln
Workshop 7/Workshop/jsonApp/: CMakeLists.txt  CMakeLists.txt.bak  data.json  json.vcxproj  json.vcxproj.filters  main.cpp  readme.txt
Workshop 7/Workshop/tcpclient/: CMakeLists.txt  main.cpp  readme.txt  tcpclient.sln  tcpclient.vcxproj
Workshop 7/Workshop/tcpserver/: CMakeLists.txt  main.cpp  readme.txt  tcpserver.filters  tcpserver.sln  tcpserver.vcxproj  tcpserver.vcxproj.filters
Workshop 7/Workshop/udpclient/: CMakeLists.txt  main.cpp  readme.txt  udpclient.sln  udpclient.vcxproj  udpclient.vcxproj.filters
Workshop 7/Workshop/udpserver/: CMakeLists.txt  main.cpp  readme.txt  udpserver.sln  udpserver.vcxproj  udpserver.vcxproj.filters
Workshop 8/Workshop/: workshop 8.sln
Workshop 8/Workshop/gunittest/: CMakeLists.txt  gunittest.cpp  gunittest.vcxproj  gunittest.vcxproj.filters  readme.txt
(+71 files in other folders)
